# claude_voice

./: .gitignore  README.md  pyproject.toml  settings.json  voice_config.json
.claude-plugin/: marketplace.json  plugin.json
command/: tts-summary.md
commands/: config.md  init.md  tts-summary.md
hooks/: hooks.json
hooks/claude_voice/: pyproject.toml
hooks/claude_voice/scripts/: speak.py  speak_notification.py  speak_summary.py
hooks/claude_voice/voice/: __init__.py  utils.py  voice.py
scripts/: check_init.py  check_init.sh  debug_hook.py  inject_tts_instruction.py  record_command_start.py  run_hook.py  speak.py  speak_command_done.py  speak_idle_done.py  speak_notification.py  speak_summary.py
voice/: __init__.py  base.py  chatterbox_tts.py  kokoro_tts.py  mlx_tts.py  utils.py  voice.py
