[project]
name = "claude-voice"
version = "0.1.0"
description = "Minimal Kokoro ONNX TTS for Claude Code hooks"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kokoro-onnx>=0.4.3",
    "numpy>=2.0.0",
    "sounddevice>=0.5.0",
]

[project.optional-dependencies]
ja = ["misaki[ja]"]
zh = ["misaki[zh]"]
ko = ["misaki[ko]"]
multi-lang = ["misaki"]
all-languages = [
    "misaki[ja]",
    "misaki[zh]",
    "misaki[ko]",
]

[tool.setuptools]
packages = ["voice"]
