[project]
name = "claude-voice"
version = "0.2.0"
description = "Text-to-speech for Claude Code hooks — supports Kokoro, Chatterbox, and MLX-Audio"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5.0",
]

[project.optional-dependencies]
kokoro = [
    "kokoro-onnx>=0.4.3",
    "numpy>=2.0.0",
]
chatterbox = [
    "chatterbox-tts>=0.1.6",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.6.0",
    "torchaudio",
    "ml-dtypes>=0.5.0",
    "onnx>=1.17.0,<1.19.0",
]
# macOS Apple Silicon only — uses Apple MLX framework for fast native inference
mlx = [
    "mlx-audio>=0.4.0",
]
# Language support (Kokoro only)
ja = ["misaki[ja]"]
zh = ["misaki[zh]"]
ko = ["misaki[ko]"]
multi-lang = ["misaki"]
all-languages = [
    "misaki[ja]",
    "misaki[zh]",
    "misaki[ko]",
]

[tool.setuptools]
packages = ["voice"]
